ADDED: Loading spinner on very start

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,17 @@
 
 <body>
     <app-root>
-        Loading...
+        <div class="loader">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+        <!-- <div class="main_load"> -->
+        <!-- <div class="lds-css ng-scope" style="width: 00px; height: 200px;"> -->
+        <!-- <div style="width:100%;height:100%" class="lds-rolling">
+                <div></div>
+            </div> -->
+        <!-- </div> -->
     </app-root>
 </body>
 
